--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
-hello sunny
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Adventure Game</title>
+  <link href="https://fonts.googleapis.com/css2?family=Annie+Use+Your+Telescope&display=swap" rel="stylesheet">
+	
+  <link rel="stylesheet" type="text/css" href="styles.css">
+ 
+ 
+</head>
+<body>
+
+<div class="container">
+	<h1>Welcome to the Adventure Game</h1>
+
+	<h2 class="location">Start</h2>
+	<h4 class="text">Where do you want to start your Adventure?</h4>
+	<button class="btn1">beach</button>
+	<button class="btn2">jungle</button>
+	<button class="btn3">mountains</button>
+	<div class="adv-img"><img src="start.jpg" alt="adv-img"></div>
+
+</div>
+
+
+
+</body>
+</html>
