--- a/card.html
+++ b/card.html
@@ -13,9 +13,9 @@
 <body>
 
 <div class="container">
-	<h1>Frontendmentor challenges</h1>
+	<h1>card challenges</h1>
 
-	<a href="/card.html">first </a>
+	
 </div>
 
 
