--- a/index.html
+++ b/index.html
@@ -13,14 +13,9 @@
 <body>
 
 <div class="container">
-	<h1>Welcome to the Adventure Game</h1>
-
-	<h2 class="location">Start</h2>
-	<h4 class="text">Where do you want to start your Adventure?</h4>
-	<button class="btn1">beach</button>
-	<button class="btn2">jungle</button>
-	<button class="btn3">mountains</button>
-	<div class="adv-img"><img src="start.jpg" alt="adv-img"></div>
+	<h1>Here you can find some of my projects and challenges</h1>
+	<a href="/challenges/frontendmentor">frontendmentor</a>
+	
 
 </div>
 
