--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Adventure Game</title>
+	<title>sunnyandkate projects</title>
   <link href="https://fonts.googleapis.com/css2?family=Annie+Use+Your+Telescope&display=swap" rel="stylesheet">
 	
   <link rel="stylesheet" type="text/css" href="styles.css">
@@ -13,9 +13,9 @@
 <body>
 
 <div class="container">
-	<h1>Frontendmentor challenges</h1>
-
-	<a href="/card.html">first </a>
+	<h1>Here you can find some of my projects and challenges</h1>
+	<h2>frontendmentor</h2>
+	<a href="/chat-app" target="_blank">chat app</a>
 </div>
 
 
