--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 	<h1>Here you can find some of my projects and challenges</h1>
 	<h2>frontendmentor</h2>
 	<a href="/chat-app" target="_blank">chat app</a>
+  <h2>projects</h2>
+  <a href="/vue-todo" target="_blank">todo list</a>
 </div>
 
 
