--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <div class="container">
 	<h1>Here you can find some of my projects and challenges</h1>
 	<h2>frontendmentor</h2>
-	<a href="/simple booking" target="_blank">chat app</a>
+	<a href="/simpleBooking" target="_blank">chat app</a>
   <a href="/pricingComponent" target="_blank">pricing component</a>
   <h2>projects</h2>
   <a href="/vue-todo" target="_blank">todo list</a>
