--- a/index.html
+++ b/index.html
@@ -15,8 +15,17 @@
 <div class="container">
 	<h1>Here you can find some of my projects and challenges</h1>
 	<h2>frontendmentor</h2>
-	<a href="/simpleBooking" target="_blank">chat app</a>
+  <a href="/accordion-challenge" target="_blank">accordion challenge</a>
+  <a href="/four-cards" target="_blank">four cards</a>
+  <a href="/simpleBooking" target="_blank">chat app</a>
+  <a href="/range-slider" target="_blank">range slider</a>
+  <a href="/easy-bank-landing-page" target="_blank">easy bank landing page</a>
   <a href="/pricingComponent" target="_blank">pricing component</a>
+  <a href="/sign-up-form" target="_blank">sign up form</a>
+  <a href="/fyloDataStorage" target="_blank">fylo data storage</a>
+  <a href="/profileCardChallenge" target="_blank">profile card</a>
+  <a href="/flexboxProject" target="_blank">huddle landing page</a>
+  <a href="/articlePreview" target="_blank">article preview</a>
   <h2>projects</h2>
   <a href="/vue-todo" target="_blank">todo list</a>
   
