--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<h1>Here you can find some of my projects and challenges</h1>
 	<h2>frontendmentor</h2>
   <a href="/accordion-challenge" target="_blank">accordion challenge</a>
-  <a href="/four-cards" target="_blank">four cards</a>
+  <a href="/fourCards" target="_blank">four cards</a>
   <a href="/simpleBooking" target="_blank">chat app</a>
   <a href="/range-slider" target="_blank">range slider</a>
   <a href="/easy-bank-landing-page" target="_blank">easy bank landing page</a>
