--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
   <a href="/easy-bank-landing-page" target="_blank">easy bank landing page</a>
   <a href="/pricingComponent" target="_blank">pricing component</a>
   <a href="/sign-up-form" target="_blank">sign up form</a>
+  <a href="/manageLandingPage" target="_blank">manage landing page</a>
   <a href="/fyloDataStorage" target="_blank">fylo data storage</a>
   <a href="/profileCardChallenge" target="_blank">profile card</a>
   <a href="/flexboxProject" target="_blank">huddle landing page</a>
   <a href="/articlePreview" target="_blank">article preview</a>
+  <a href="/singlePriceGridComponent" target="_blank">single price grid component</a>
   <h2>projects</h2>
   <a href="/vue-todo" target="_blank">todo list</a>
   
