--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>sunnyandkate projects</title>
-  <link href="https://fonts.googleapis.com/css2?family=Annie+Use+Your+Telescope&display=swap" rel="stylesheet">
-	
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet"> 
   <link rel="stylesheet" type="text/css" href="styles.css">
  
  
@@ -15,19 +16,19 @@
 <div class="container">
 	<h1>Here you can find some of my projects and challenges</h1>
 	<h2>frontendmentor</h2>
-  <a href="/accordion-challenge" target="_blank">accordion challenge</a>
-  <a href="/fourCards" target="_blank">four cards</a>
-  <a href="/simpleBooking" target="_blank">chat app</a>
-  <a href="/range-slider" target="_blank">range slider</a>
-  <a href="/easy-bank-landing-page" target="_blank">easy bank landing page</a>
-  <a href="/pricingComponent" target="_blank">pricing component</a>
-  <a href="/sign-up-form" target="_blank">sign up form</a>
-  <a href="/manageLandingPage" target="_blank">manage landing page</a>
-  <a href="/fyloDataStorage" target="_blank">fylo data storage</a>
-  <a href="/profileCardChallenge" target="_blank">profile card</a>
-  <a href="/flexboxProject" target="_blank">huddle landing page</a>
-  <a href="/articlePreview" target="_blank">article preview</a>
-  <a href="/singlePriceGridComponent" target="_blank">single price grid component</a>
+  <a href="/accordion-challenge" target="_blank" class="tooltip accordion">accordion challenge<span class="tooltip-accordion"></span></a>
+  <a href="/fourCards" target="_blank" class="tooltip fourCards">four cards<span class="tooltip-fourCards"></span></a>
+  <a href="/simpleBooking" target="_blank" class="tooltip chatApp">chat app<span class="tooltip-chatApp"></span></a>
+  <a href="/range-slider" target="_blank" class="tooltip rangeSlider">range slider<span class="tooltip-rangeSlider"></span></a>
+  <a href="/easy-bank-landing-page" target="_blank" class="tooltip easyBank">easy bank landing page<span class="tooltip-easyBank"></span></a>
+  <a href="/pricingComponent" target="_blank" class="tooltip pricingComponent">pricing component<span class="tooltip-pricingComponent"></span></a>
+  <a href="/sign-up-form" target="_blank" class="tooltip signUpForm">sign up form<span class="tooltip-signUpForm"></span></a>
+  <a href="/manageLandingPage" target="_blank" class="tooltip manageLandingPage">manage landing page<span class="tooltip-manageLandingPage"></span></a>
+  <a href="/fyloDataStorage" target="_blank" class="tooltip fyloDataStorage">fylo data storage<span class="tooltip-fyloDataStorage"></span></a>
+  <a href="/profileCardChallenge" target="_blank" class="tooltip profileCard">profile card<span class="tooltip-profileCard"></span></a>
+  <a href="/flexboxProject" target="_blank" class="tooltip huddle">huddle landing page<span class="tooltip-huddle"></span></a>
+  <a href="/articlePreview" target="_blank" class="tooltip articlePreview">article preview<span class="tooltip-articlePreview"></span></a>
+  <a href="/singlePriceGridComponent" target="_blank" class="tooltip singlePrice">single price grid component<span class="tooltip-singlePrice"></span></a>
   <h2>projects</h2>
   <a href="/vue-todo" target="_blank">todo list</a>
   
