--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 <div class="container">
 	<h1>Here you can find some of my projects and challenges</h1>
 	<h2>frontendmentor</h2>
+  <a href="/job-listings" target="_blank" class="tooltip jobListings">job listings<span class="tooltip-jobListings"></span></a>
+  <a href="/todo-list" target="_blank" class="tooltip todo-list">todo list<span class="tooltip-todo-list"></span></a>
   <a href="/accordion-challenge" target="_blank" class="tooltip accordion">accordion challenge<span class="tooltip-accordion"></span></a>
   <a href="/fourCards" target="_blank" class="tooltip fourCards">four cards<span class="tooltip-fourCards"></span></a>
   <a href="/simpleBooking" target="_blank" class="tooltip chatApp">chat app<span class="tooltip-chatApp"></span></a>
