--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <div class="container">
 	<h1>Here you can find some of my projects and challenges</h1>
 	<h2>frontendmentor</h2>
+  <a href="/blogrLandingPage" target="_blank" class="tooltip blogrLandingPage">blogr Landing Page<span class="tooltip-blogrLandingPage"></span></a>
   <a href="/job-listings" target="_blank" class="tooltip jobListings">job listings<span class="tooltip-jobListings"></span></a>
   <a href="/todo-list" target="_blank" class="tooltip todo-list">todo list<span class="tooltip-todo-list"></span></a>
   <a href="/accordion-challenge" target="_blank" class="tooltip accordion">accordion challenge<span class="tooltip-accordion"></span></a>
