--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
   <a href="/flexboxProject" target="_blank" class="tooltip huddle">huddle landing page<span class="tooltip-huddle"></span></a>
   <a href="/articlePreview" target="_blank" class="tooltip articlePreview">article preview<span class="tooltip-articlePreview"></span></a>
   <a href="/singlePriceGridComponent" target="_blank" class="tooltip singlePrice">single price grid component<span class="tooltip-singlePrice"></span></a>
+  <a href="/crowdfunding-product-page" target="_blank" class="tooltip productPage">product page<span class="tooltip-productPage"></span></a>
   <h2>projects</h2>
   <a href="/vue-todo" target="_blank">todo list</a>
   
