--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <a href="/crowdfunding-product-page" target="_blank" class="tooltip productPage">product page<span class="tooltip-productPage"></span></a>
   <h2>projects</h2>
   <a href="/vue-todo" target="_blank">todo list</a>
-  
+  <a href="/snowglobe" target="_blank">snowglobe</a>
 	
 
 </div>
