--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <h2>projects</h2>
   <a href="/vue-todo" target="_blank">todo list</a>
   <a href="/snowglobe" target="_blank">snowglobe</a>
-	
+  <a href="/random-names" target="_blank">random names</a>
 
 </div>
 
