--- a/index.html
+++ b/index.html
@@ -41,7 +41,32 @@
   <a href="/random-names" target="_blank">random names</a>
 
 </div>
-
+	<div class="footer">
+		<p class="copyright">&copy; 2022 by sunnyandkate</p>
+		<div class="footer-right">	
+		<a href="/legal">Legal details |</a>
+		<a href="/privacypolicy">Privacy Policy |</a>
+	</div>
+	<script src="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.js" data-cfasync="false"></script>
+    <script>
+    window.cookieconsent.initialise({
+      "palette": {
+        "popup": {
+          "background": "#4a6743"
+        },
+        "button": {
+          "background": "#d6d099",
+        "color": "#4a6743"
+        }
+      },
+      "content": {
+        "dismiss": "OK",
+        "link": "learn more",
+        "href": "/privacypolicy"
+      }
+    });
+    </script>
+</div>	
 
 
 </body>
