--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		<p class="copyright">&copy; 2022 by sunnyandkate</p>
 		<div class="footer-right">	
 		<a href="/legal">Legal details |</a>
-		<a href="/privacypolicy">Privacy Policy |</a>
+		<a href="/privacyPolicy">Privacy Policy |</a>
 	</div>
 	<script src="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.js" data-cfasync="false"></script>
     <script>
