--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       "content": {
         "dismiss": "OK",
         "link": "learn more",
-        "href": "/privacypolicy"
+        "href": "/privacyPolicy"
       }
     });
     </script>
