--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>sunnyandkate projects</title>
- 
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orestbida/cookieconsent@v2.9.2/dist/cookieconsent.css">
+  <script src="https://cdn.jsdelivr.net/gh/orestbida/cookieconsent@v2.9.2/dist/cookieconsent.js"></script>
   <link rel="stylesheet" type="text/css" href="styles.css">
  
  
@@ -39,32 +40,13 @@
   <a href="/random-names" target="_blank">random names</a>
 
 </div>
-	<div class="footer">
-		<p class="copyright">&copy; 2023 by sunnyandkate</p>
-		<div class="footer-right">	
-		<a href="/legal">Legal details |</a>
-		<a href="/privacyPolicy">Privacy Policy |</a>
-	</div>
-	<script src="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.js" data-cfasync="false"></script>
-    <script>
-    window.cookieconsent.initialise({
-      "palette": {
-        "popup": {
-          "background": "#4a6743"
-        },
-        "button": {
-          "background": "#d6d099",
-        "color": "#4a6743"
-        }
-      },
-      "content": {
-        "dismiss": "OK",
-        "link": "learn more",
-        "href": "/privacyPolicy"
-      }
-    });
-    </script>
-</div>	
+<div class="footer">
+	<p class="copyright">&copy; 2023 by sunnyandkate</p>
+	<div class="footer-right">	
+	<a href="/legal">Legal details |</a>
+	<a href="/privacyPolicy">Privacy Policy |</a>
+</div>
+<script defer src="cookieconsent-init.js"></script>
 
 
 </body>
