--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <div class="container">
 	<h1>Here you can find some of my projects and challenges</h1>
 	<h2>frontendmentor</h2>
+	<a href="/FrontendmentorChallenges">frontendmentor challenges</a>
   <a href="/sunnyside" target="_blank" class="tooltip sunnyside">sunnyside<span class="tooltip-sunnyside"></span></a>
   <a href="/tip-calculator" target="_blank" class="tooltip tip-calculator">tip calculator<span class="tooltip-tip-calculator"></span></a>
   <a href="/blogrLandingPage" target="_blank" class="tooltip blogrLandingPage">blogr Landing Page<span class="tooltip-blogrLandingPage"></span></a>
