--- a/index.html
+++ b/index.html
@@ -13,32 +13,9 @@
 <body>
 
 <div class="container">
-	<h1>Here you can find some of my projects and challenges</h1>
-	<h2>frontendmentor</h2>
-	<a href="/FrontendmentorChallenges">frontendmentor challenges</a>
-  <a href="/sunnyside" target="_blank" class="tooltip sunnyside">sunnyside<span class="tooltip-sunnyside"></span></a>
-  <a href="/tip-calculator" target="_blank" class="tooltip tip-calculator">tip calculator<span class="tooltip-tip-calculator"></span></a>
-  <a href="/blogrLandingPage" target="_blank" class="tooltip blogrLandingPage">blogr Landing Page<span class="tooltip-blogrLandingPage"></span></a>
-  <a href="/job-listings" target="_blank" class="tooltip jobListings">job listings<span class="tooltip-jobListings"></span></a>
-  <a href="/todo-list" target="_blank" class="tooltip todo-list">todo list<span class="tooltip-todo-list"></span></a>
-  <a href="/accordion-challenge" target="_blank" class="tooltip accordion">accordion challenge<span class="tooltip-accordion"></span></a>
-  <a href="/fourCards" target="_blank" class="tooltip fourCards">four cards<span class="tooltip-fourCards"></span></a>
-  <a href="/simpleBooking" target="_blank" class="tooltip chatApp">chat app<span class="tooltip-chatApp"></span></a>
-  <a href="/range-slider" target="_blank" class="tooltip rangeSlider">range slider<span class="tooltip-rangeSlider"></span></a>
-  <a href="/easy-bank-landing-page" target="_blank" class="tooltip easyBank">easy bank landing page<span class="tooltip-easyBank"></span></a>
-  <a href="/pricingComponent" target="_blank" class="tooltip pricingComponent">pricing component<span class="tooltip-pricingComponent"></span></a>
-  <a href="/sign-up-form" target="_blank" class="tooltip signUpForm">sign up form<span class="tooltip-signUpForm"></span></a>
-  <a href="/manageLandingPage" target="_blank" class="tooltip manageLandingPage">manage landing page<span class="tooltip-manageLandingPage"></span></a>
-  <a href="/fyloDataStorage" target="_blank" class="tooltip fyloDataStorage">fylo data storage<span class="tooltip-fyloDataStorage"></span></a>
-  <a href="/profileCardChallenge" target="_blank" class="tooltip profileCard">profile card<span class="tooltip-profileCard"></span></a>
-  <a href="/flexboxProject" target="_blank" class="tooltip huddle">huddle landing page<span class="tooltip-huddle"></span></a>
-  <a href="/articlePreview" target="_blank" class="tooltip articlePreview">article preview<span class="tooltip-articlePreview"></span></a>
-  <a href="/singlePriceGridComponent" target="_blank" class="tooltip singlePrice">single price grid component<span class="tooltip-singlePrice"></span></a>
-  <a href="/crowdfunding-product-page" target="_blank" class="tooltip productPage">product page<span class="tooltip-productPage"></span></a>
-  <h2>projects</h2>
-  <a href="/vue-todo" target="_blank">todo list</a>
-  <a href="/snowglobe" target="_blank">snowglobe</a>
-  <a href="/random-names" target="_blank">random names</a>
+
+	<a href="/FrontendmentorChallenges">Here you can find some of my projects and challenges</a>
+  
 
 </div>
 <div class="footer">
