--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
         <a href="mailto:sunnyandkate@yahoo.com"><img src="images/letter.png"></a>
     </div>
     <div class="footer-right">
-        <a href="legal.php">legal details <span>| </span></a>
+        <a href="/legal.php">legal details <span>| </span></a>
         <a href="privacypolicy.php">privacy policy</a>
     </div>
 
