--- a/contact.html
+++ b/contact.html
@@ -47,8 +47,8 @@
         <a href="mailto:sunnyandkate@yahoo.com"><img src="images/letter.png"></a>
     </div>
     <div class="footer-right">
-        <a href="/legal.php">legal details <span>| </span></a>
-        <a href="privacypolicy.php">privacy policy</a>
+        <a href="legal.html">legal details <span>| </span></a>
+        <a href="privacypolicy.html">privacy policy</a>
     </div>
 
 </footer>
