--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
        <div class="about-content">               
                <div class="about-top">
                   
-                   <img class="npc" src="images/npcCat.png" width="50px">
+                   <img class="npc" src="images/CatNpc.png" width="50px">
                </div>                                     
                <p>You can reach out to me at <a class="contactInfo" href="mailto:sunnyandkate@yahoo.com">sunnyandkate@yahoo.com</a></p>                                   
                <p>Or you can find me here: </p>                   
