--- a/games.html
+++ b/games.html
@@ -67,7 +67,7 @@
 
 
 
-<footer>
+<footer class="footer-games">
     <p class="copyright">&copy; 2025 sunnyandkate</p>
     <div class="connect-icons">
         <a href="https://github.com/sunnyandkate" target="_blank"><img src="images/github-dark.png" alt="github"></a>
