--- a/games/YogaCatAdventureGame/index.html
+++ b/games/YogaCatAdventureGame/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/YogaCatAdventureGame.loader.js";
+      var loaderUrl = buildUrl + "/YogaCatAdventure.loader.js";
       var config = {
-        dataUrl: buildUrl + "/YogaCatAdventureGame.data.unityweb",
-        frameworkUrl: buildUrl + "/YogaCatAdventureGame.framework.js.unityweb",
-        codeUrl: buildUrl + "/YogaCatAdventureGame.wasm.unityweb",
+        dataUrl: buildUrl + "/YogaCatAdventure.data.unityweb",
+        frameworkUrl: buildUrl + "/YogaCatAdventure.framework.js.unityweb",
+        codeUrl: buildUrl + "/YogaCatAdventure.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "com.sunnyandkate.YogaCat",
         productName: "YogaCatGame",
@@ -68,12 +68,21 @@
         showBanner: unityShowBanner,
       };
 
-      // By default Unity keeps WebGL canvas render target size matched with
+      // By default, Unity keeps WebGL canvas render target size matched with
       // the DOM size of the canvas element (scaled by window.devicePixelRatio)
       // Set this to false if you want to decouple this synchronization from
       // happening inside the engine, and you would instead like to size up
       // the canvas DOM size and WebGL render target sizes yourself.
       // config.matchWebGLToCanvasSize = false;
+
+      // If you would like all file writes inside Unity Application.persistentDataPath
+      // directory to automatically persist so that the contents are remembered when
+      // the user revisits the site the next time, uncomment the following line:
+      // config.autoSyncPersistentDataPath = true;
+      // This autosyncing is currently not the default behavior to avoid regressing
+      // existing user projects that might rely on the earlier manual
+      // JS_FileSystem_Sync() behavior, but in future Unity version, this will be
+      // expected to change.
 
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
         // Mobile device style: fill the whole browser client area with the game canvas:
