--- a/games.html
+++ b/games.html
@@ -32,7 +32,7 @@
             </a>
         </div>
 <div class="platformerBtn" style="position: absolute; top: 400px; left: 100px; width: 200px; height: 150px;">
-            <a href="games/PlatformerGame/index.html" target="_blank" class="" onclick="return confirm('Do you want to play the game and get redirected?')">
+            <a href="games/Platformer/index.html" target="_blank" class="" onclick="return confirm('Do you want to play the game and get redirected?')">
                 <img src="images/platformerBtn.png">
             </a>
         </div>
