--- a/games.html
+++ b/games.html
@@ -46,7 +46,12 @@
                 <img src="images/slidePuzzleBtn.png">
             </a>
         </div>
-
+      
+<div class="btnTextAdv" style="position: absolute; top: 100px; left: 200px; width: 200px; height: 150px;">
+            <a href="TextAdventure" target="_blank" class="">
+                <img src="images/textAdventureBtn.png">
+            </a>
+        </div>
 <div class="yogaCatBtn" style="position: absolute; top: 540px; left: 960px; width: 200px; height: 150px;">
             <a href="games/YogaCatAdventureGame/index.html" target="_blank" class="" onclick="return confirm('Do you want to play the game and get redirected?')">
                 <img src="images/yogaCatBtn.png">
