--- a/javaProjects.html
+++ b/javaProjects.html
@@ -14,7 +14,7 @@
 <div class="nav-container">
    
    <nav>
-       <h2><a class="logo" href="index.php">SunnyAndKate</a></h2>
+       <h2><a class="logo" href="sunnyandkate.html">SunnyAndKate</a></h2>
        <ul>
            <li><a href="about.html">About</a></li>
            <li><a href="games.html">Games</a></li>
