--- a/legal.html
+++ b/legal.html
@@ -14,7 +14,7 @@
 	<div class="nav-container">
    
         <nav>
-            <h2><a class="logo" href="index.html">SunnyAndKate</a></h2>
+            <h2><a class="logo" href="sunnyandkate.html">SunnyAndKate</a></h2>
             <ul>
                 <li><a href="about.html">About</a></li>
                 <li><a href="games.html">Games</a></li>
@@ -34,7 +34,7 @@
 	<h2>Contact Information</h2>
 	<p>telephone: 00491601075957</p>
 	<p>e-Mail: <a href="mailto:sunnyandkate@yahoo.com">sunnyandkate@yahoo.com</a></p>
-	<p>Internet address: <a href="index.php" target="_blank">www.sunnyandkate.com</a></p>
+	<p>Internet address: <a href="index.php" target="_blank">www.sunnyandkate.github.io</a></p>
 	<p>VAT: DE325924091</p>
 
 	
