--- a/games.html
+++ b/games.html
@@ -16,6 +16,13 @@
         <p class="welcome">Walk or click on the houses to download the games for Android or play in Unity WebGL</p>
         <img class="player" src="images/player_down1.png" style="position: absolute; top: 10px; left: 10px;">
             
+   
+   
+   <!--  <div class="jumpingCatBtn" style="position: absolute; top: 80px; left: 700px; width: 200px; height: 150px;">
+            <a href="games/JumpingCat.apk" target="_blank" class="" onclick="return confirm('Do you want to download the game?')">
+                <img src="images/jumpingCatBtn.png">
+            </a>
+    </div>
     <div class="cloudGameBtn" style="position: absolute; top: 600px; left: 800px; width: 200px; height: 150px;">
         <a href="games/JumpingClouds.apk" onclick="return confirm('Do you want to download the game?')" target="_blank" class="">
             <img src="images/cloudGameBtn.png">
@@ -26,16 +33,11 @@
                 <img src="images/collectingCoinsBtn.png">
             </a>
     </div>
-    <div class="jumpingCatBtn" style="position: absolute; top: 80px; left: 700px; width: 200px; height: 150px;">
-            <a href="games/JumpingCat.apk" target="_blank" class="" onclick="return confirm('Do you want to download the game?')">
-                <img src="images/jumpingCatBtn.png">
-            </a>
-    </div>
     <div class="platformerBtn" style="position: absolute; top: 400px; left: 100px; width: 200px; height: 150px;">
             <a href="games/Platformer/index.html" target="_blank" class="" onclick="return confirm('Do you want to play the game and get redirected?')">
                 <img src="images/platformerBtn.png">
             </a>
-    </div>
+    </div> -->
     <div class="catDetectiveBtn" style="position: absolute; top: 150px; left: 500px; width: 200px; height: 150px;">
             <a href="games/CatDetective/index.html" target="_blank" class="catDetectiveBtnLink" onclick="return confirm('Do you want to play the game and get redirected or download the mobile version?')">
                 <img src="images/catDetectiveBtn.png">
