--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,9 @@
                   
                    <img class="npc" src="images/CatNpc.png" width="50px">
                </div>                                     
-               <p>You can reach out to me at <a class="contactInfo" href="mailto:sunnyandkate@yahoo.com">sunnyandkate@yahoo.com</a></p>                                   
+               <p>You can reach out to me at</p>
+                <a class="contactInfo" href="mailto:sunnyandkate@yahoo.com">sunnyandkate@yahoo.com</a>                                 
+               
                <p>Or you can find me here: </p>                   
                <div class="btn-row">
                    <div class="btn"><a href="https://linkedin.com/in/kathrin-markworth-6343a3211/">linkedIn</a></div>
