--- a/legal.html
+++ b/legal.html
@@ -34,7 +34,7 @@
 	<h2>Contact Information</h2>
 	<p>telephone: 00491601075957</p>
 	<p>e-Mail: <a href="mailto:sunnyandkate@yahoo.com">sunnyandkate@yahoo.com</a></p>
-	<p>Internet address: <a href="index.php" target="_blank">www.sunnyandkate.github.io</a></p>
+	<p>Internet address: <a href="index.html" target="_blank">www.sunnyandkate.github.io</a></p>
 	<p>VAT: DE325924091</p>
 
 	
